# turbopi_ros

./: CMakeLists.txt  README.md  package.xml  turbopi_hardware_interface.xml
.github/workflows/: docker_build.yml
config/: camera.yaml  camera_info.yaml  depthimage_to_laserscan.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml  ros2_laser_scan_merger.yaml  slam_toolbox.yaml  turbopi.rviz  turbopi_controllers.yaml  turbopi_depth.rviz
description/: colors.xacro  gazebo_plugins.xacro  gz_ros2_control.xacro  inertial_macros.xacro  ros2_control.xacro  turbopi.urdf.xacro  turbopi_core.xacro
etc/systemd/system/: ros2_rplidar.service  ros2_rplidar_motor_stop.service  ros2_turbopi.service
include/: battery.hpp  battery_monitor_node.hpp  battery_node.hpp  i2c.hpp  infrared.hpp  infrared_node.hpp  joint.hpp  segment.hpp  sonar.hpp  sonar_node.hpp  teleop_turbopi.hpp  turbopi.hpp  turbopi_hardware_interface.hpp  visibility_control.h
launch2/: gamepad.launch.py  ign_gazebo.launch.py  nav2.launch.py  turbopi_gazebo.launch.py  turbopi_ros.launch.py
meshes/: astra_s_depth_camera.stl  camera.dae  camera.stl  camera_frame.dae  camera_frame.stl  chassis.dae  chassis.stl  sonar.dae  sonar.stl  spacer.dae  spacer.stl
src/: battery.cpp  battery_monitor_node.cpp  battery_node.cpp  i2c.cpp  infrared.cpp  infrared_node.cpp  joint.cpp  sonar.cpp  sonar_node.cpp  teleop_turbopi.cpp  teleop_turbopi_node.cpp  turbopi.cpp  turbopi_hardware_interface.cpp
src/tests/: test_battery.cpp  test_infrared.cpp  test_sonar.cpp
worlds/: empty.world  playground.world
