<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turbopi_ros</name>
  <version>0.1.0</version>
  <description>TurboPi running ROS Iron</description>
  <maintainer email="w@wltjr.com">William L. Thomson Jr.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_limits</build_depend>

  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>ros2_laser_scan_merger</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
   <gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
   <gazebo_ros gazebo_media_path="${prefix}/media"/>
   <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
</package>
